[package]
name = "blockchain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.72"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.20"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "2.0"
serde_json = "1.0.108"
aes = "0.8"
block-modes = "0.8"
openssl = "0.10.70"
num-bigint = "0.4.6"
num-traits = "0.2.19"
lazy_static = "1.5.0"
sha2 = "0.11.0-pre.4"
des = "0.4"
generic-array = "0.14.7"
typenum = "1.17.0"
ecdsa = "0.17.0-pre.9"
signature = "2.3.0-pre.4"
rand = "0.8.5"
k256 = "0.11"
base64 = "0.21"
elliptic-curve = "0.14.0-rc.1"
rand_core = "0.6.4"
thiserror = "2.0.11"
ripemd = "0.2.0-pre.4"
